moved .csv files to resources folder

--- a/Data_Engineering.ipynb
+++ b/Data_Engineering.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -114,14 +114,14 @@
        "4  USC00519397  2010-01-06   NaN    73"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# read in the csv\n",
-    "measurements = pd.read_csv(\"hawaii_measurements.csv\")\n",
+    "measurements = pd.read_csv(\"Resources/hawaii_measurements.csv\")\n",
     "measurements.head()"
    ]
   },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -327,14 +327,14 @@
        "4      306.6  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read in the csv\n",
-    "stations = pd.read_csv(\"hawaii_stations.csv\")\n",
+    "stations = pd.read_csv(\"Resources/hawaii_stations.csv\")\n",
     "stations.head()"
    ]
   },
