removed additional index from cleaned csvs

--- a/Data_Engineering.ipynb
+++ b/Data_Engineering.ipynb
@@ -227,6 +227,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Creating a new csv for the cleaned data\n",
+    "measurements.to_csv(\"Resources/clean_hawaii_measurements.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -399,6 +411,18 @@
    "source": [
     "# Checking for NaNs\n",
     "stations.isnull().values.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Creating a new csv for the cleaned data\n",
+    "stations.to_csv(\"Resources/clean_hawaii_stations.csv\")"
    ]
   },
   {
