create sqlite database

--- a/Data_Engineering.ipynb
+++ b/Data_Engineering.ipynb
@@ -228,14 +228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Creating a new csv for the cleaned data\n",
-    "measurements.to_csv(\"Resources/clean_hawaii_measurements.csv\")"
+    "measurements.to_csv(\"Resources/clean_hawaii_measurements.csv\", index=False)"
    ]
   },
   {
@@ -415,14 +415,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Creating a new csv for the cleaned data\n",
-    "stations.to_csv(\"Resources/clean_hawaii_stations.csv\")"
+    "stations.to_csv(\"Resources/clean_hawaii_stations.csv\", index=False)"
    ]
   },
   {
