--- a/Database_Engineering.ipynb
+++ b/Database_Engineering.ipynb
@@ -16,6 +16,180 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Read in dependencies\n",
+    "import pandas as pd\n",
+    "# Python SQL toolkit and Object Relational Mapper\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy import create_engine, MetaData\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "\n",
+    "from sqlalchemy import Column, Integer, String, Numeric, Text, Float, Date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create an engine to a SQLite database file called `hawaii.sqlite`\n",
+    "engine = create_engine(\"sqlite:///hawaii.sqlite\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create a connection to the engine called `conn`\n",
+    "conn = engine.connect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating the Measurements Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use `declarative_base` from SQLAlchemy to model the measurements table as an ORM class\n",
+    "# Make sure to specify types for each column, e.g. Integer, Text, etc.\n",
+    "# http://docs.sqlalchemy.org/en/latest/core/type_basics.html\n",
+    "Base = declarative_base()\n",
+    "\n",
+    "class Measurements(Base):\n",
+    "    __tablename__ = 'measurements'\n",
+    "\n",
+    "    id = Column(Integer, primary_key=True)\n",
+    "    station = Column(Text)\n",
+    "    date = Column(Date)\n",
+    "    precip = Column(Float)  \n",
+    "    tobs = Column(Float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Use `create_all` to create the measurements table in the database\n",
+    "Base.metadata.create_all(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>date</th>\n",
+       "      <th>prcp</th>\n",
+       "      <th>tobs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-03</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       station        date  prcp  tobs\n",
+       "0  USC00519397  2010-01-01  0.08    65\n",
+       "1  USC00519397  2010-01-02  0.00    63\n",
+       "2  USC00519397  2010-01-03  0.00    74\n",
+       "3  USC00519397  2010-01-04  0.00    76\n",
+       "4  USC00519397  2010-01-06   NaN    73"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the cleaned csv file into a pandas dataframe\n",
+    "measurements_df = pd.read_csv(\"Resources/clean_hawaii_measurements.csv\")\n",
+    "measurements_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
