created table for stations

--- a/Database_Engineering.ipynb
+++ b/Database_Engineering.ipynb
@@ -66,7 +66,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use `declarative_base` from SQLAlchemy to model the measurements table as an ORM class\n",
@@ -189,13 +191,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Creating the Stations Table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Use `declarative_base` from SQLAlchemy to model the measurements table as an ORM class\n",
+    "# Make sure to specify types for each column, e.g. Integer, Text, etc.\n",
+    "# http://docs.sqlalchemy.org/en/latest/core/type_basics.html\n",
+    "class Stations(Base):\n",
+    "    __tablename__ = 'stations'\n",
+    "\n",
+    "    id = Column(Integer, primary_key=True)\n",
+    "    station = Column(Text)\n",
+    "    date = Column(Date)\n",
+    "    precip = Column(Float)  \n",
+    "    tobs = Column(Float)"
+   ]
   }
  ],
  "metadata": {
