--- a/Database_Engineering.ipynb
+++ b/Database_Engineering.ipynb
@@ -233,6 +233,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>name</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>elevation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>WAIKIKI 717.2, HI US</td>\n",
+       "      <td>21.2716</td>\n",
+       "      <td>-157.8168</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00513117</td>\n",
+       "      <td>KANEOHE 838.1, HI US</td>\n",
+       "      <td>21.4234</td>\n",
+       "      <td>-157.8015</td>\n",
+       "      <td>14.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00514830</td>\n",
+       "      <td>KUALOA RANCH HEADQUARTERS 886.9, HI US</td>\n",
+       "      <td>21.5213</td>\n",
+       "      <td>-157.8374</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00517948</td>\n",
+       "      <td>PEARL CITY, HI US</td>\n",
+       "      <td>21.3934</td>\n",
+       "      <td>-157.9751</td>\n",
+       "      <td>11.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00518838</td>\n",
+       "      <td>UPPER WAHIAWA 874.3, HI US</td>\n",
+       "      <td>21.4992</td>\n",
+       "      <td>-158.0111</td>\n",
+       "      <td>306.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       station                                    name  latitude  longitude  \\\n",
+       "0  USC00519397                    WAIKIKI 717.2, HI US   21.2716  -157.8168   \n",
+       "1  USC00513117                    KANEOHE 838.1, HI US   21.4234  -157.8015   \n",
+       "2  USC00514830  KUALOA RANCH HEADQUARTERS 886.9, HI US   21.5213  -157.8374   \n",
+       "3  USC00517948                       PEARL CITY, HI US   21.3934  -157.9751   \n",
+       "4  USC00518838              UPPER WAHIAWA 874.3, HI US   21.4992  -158.0111   \n",
+       "\n",
+       "   elevation  \n",
+       "0        3.0  \n",
+       "1       14.6  \n",
+       "2        7.0  \n",
+       "3       11.9  \n",
+       "4      306.6  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the cleaned csv file into a pandas dataframe\n",
+    "stations_df = pd.read_csv(\"Resources/clean_hawaii_stations.csv\")\n",
+    "stations_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
