added precip query

--- a/Climate_Analysis.ipynb
+++ b/Climate_Analysis.ipynb
@@ -83,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Create our session (link) from Python to the DB\n",
-    "session = Session(engine)"
+    "session = Session(bind = engine)"
    ]
   },
   {
@@ -102,12 +102,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select prcp & date for the last 12 months\n",
+    "results = session.query(Measurement.date, Measurement.precip).filter(Measurement.date >= '2017-01-01')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [precipitation]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create empty dict to populate\n",
+    "data = {'date': [], 'prcp': []}\n",
+    "\n",
+    "# populate dict with rows from results\n",
+    "for row in results:\n",
+    "    data['date'].append(row.date)\n",
+    "    data['prcp'].append(row.precip)\n",
+    "\n",
+    "# create pandas df from dict\n",
+    "precip17 = pd.DataFrame(data['prcp'], columns = ['precipitation'], index = data['date'])\n",
+    "print(prcp17.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>precipitation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [precipitation]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precip17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Climate Analysis: temperature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Select temp & date for the last 12 months\n",
+    "results = session.query(Measurement.date, Measurement.precip).filter(Measurement.date >= '2017-01-01')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# create empty dict to populate\n",
+    "data = {'date': [], 'prcp': []}\n",
+    "\n",
+    "# populate dict with rows from results\n",
+    "for row in results:\n",
+    "    data['date'].append(row.date)\n",
+    "    data['prcp'].append(row.precip)\n",
+    "\n",
+    "# create pandas df from dict\n",
+    "precip17 = pd.DataFrame(data['prcp'], columns = ['precipitation'], index = data['date'])\n",
+    "print(prcp17.head())"
+   ]
   },
   {
    "cell_type": "code",
