re-ran code to double-check clean data

--- a/Climate_Analysis.ipynb
+++ b/Climate_Analysis.ipynb
@@ -102,12 +102,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'measurements' has no attribute 'prcp'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-6fd17e53144b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Select prcp & date for the last 12 months\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMeasurement\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mMeasurement\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprcp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMeasurement\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdate\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;34m'2017-01-01'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'measurements' has no attribute 'prcp'"
+     ]
+    }
+   ],
    "source": [
     "# Select prcp & date for the last 12 months\n",
-    "results = session.query(Measurement.date, Measurement.precip).filter(Measurement.date >= '2017-01-01')"
+    "results = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= '2017-01-01')"
    ]
   },
   {
@@ -229,30 +241,38 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# Select temp & date for the last 12 months\n",
-    "results = session.query(Measurement.date, Measurement.precip).filter(Measurement.date >= '2017-01-01')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(None, None, None)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# create empty dict to populate\n",
-    "data = {'date': [], 'prcp': []}\n",
-    "\n",
-    "# populate dict with rows from results\n",
-    "for row in results:\n",
-    "    data['date'].append(row.date)\n",
-    "    data['prcp'].append(row.precip)\n",
-    "\n",
-    "# create pandas df from dict\n",
-    "precip17 = pd.DataFrame(data['prcp'], columns = ['precipitation'], index = data['date'])\n",
-    "print(prcp17.head())"
+    "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
+    "# and return the minimum, average, and maximum temperatures for that range of dates\n",
+    "def calc_temps(start_date, end_date):\n",
+    "    \"\"\"TMIN, TAVG, and TMAX for a list of dates.\n",
+    "    \n",
+    "    Args:\n",
+    "        start_date (string): A date string in the format %Y-%m-%d\n",
+    "        end_date (string): A date string in the format %Y-%m-%d\n",
+    "        \n",
+    "    Returns:\n",
+    "        TMIN, TAVE, and TMAX\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return session.query(func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)).\\\n",
+    "        filter(Measurement.date >= start_date).filter(Measurement.date <= end_date).all()\n",
+    "print(calc_temps('2012-02-28', '2012-03-05'))"
    ]
   },
   {
