--- a/Database_Engineering.ipynb
+++ b/Database_Engineering.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -162,9 +162,9 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>USC00519397</td>\n",
-       "      <td>2010-01-07</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>70</td>\n",
+       "      <td>2010-01-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -176,10 +176,10 @@
        "1  USC00519397  2010-01-02  0.00    63\n",
        "2  USC00519397  2010-01-03  0.00    74\n",
        "3  USC00519397  2010-01-04  0.00    76\n",
-       "4  USC00519397  2010-01-07  0.06    70"
+       "4  USC00519397  2010-01-06   NaN    73"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,10 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Use `declarative_base` from SQLAlchemy to model the measurements table as an ORM class\n",
@@ -223,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -235,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +325,7 @@
        "4      306.6  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,6 +335,15 @@
     "stations_df = pd.read_csv(\"Resources/clean_hawaii_stations.csv\")\n",
     "stations_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
