--- a/Climate_Analysis.ipynb
+++ b/Climate_Analysis.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import dependencies\n",
@@ -441,7 +443,9 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temperatures = (calc_temps('2017-02-28', '2017-03-05'))\n",
@@ -1749,7 +1753,7 @@
    "outputs": [],
    "source": [
     "# Flask Setup\n",
-    "app = Flask(__name__)"
+    "app = Flask(__weather__)"
    ]
   },
   {
@@ -1759,7 +1763,19 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "@app.route(\"/\")\n",
+    "def welcome():\n",
+    "    \"\"\"Listing of the available API routes\"\"\"\n",
+    "    return(\n",
+    "        f\"Available Routes: <br/>\"\n",
+    "        f\"/api/v1.0/precipitation <br/>\"\n",
+    "        f\"/api/v1.0/stations <br/>\"\n",
+    "        f\"/api/v1.0/tobs <br/>\"\n",
+    "        f\"/api/v1.0/<start><br/>\"\n",
+    "        f\"/api/v1.0/<start><end>\"\n",
+    "    )"
+   ]
   },
   {
    "cell_type": "code",
